--- a/app/src/main/res/layout/content_sebelum_login.xml
+++ b/app/src/main/res/layout/content_sebelum_login.xml
@@ -11,5 +11,12 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.mastahcode.waviq.pembayaran.SebelumLoginActivity"
     tools:showIn="@layout/app_bar_sebelum_login">
+    
+    <FrameLayout
+        android:id="@+id/fragment_sebelum_login"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
 
 </RelativeLayout>
