--- a/app/src/main/res/layout/fr_cek_tagihan.xml
+++ b/app/src/main/res/layout/fr_cek_tagihan.xml
@@ -8,5 +8,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Cek Tagihan"
-        android:id="@+id/textView2" />
+        android:id="@+id/textView2"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
