--- a/app/src/main/res/layout/fr_login.xml
+++ b/app/src/main/res/layout/fr_login.xml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="bottom"
+    >
 
-    <TextView
+
+    <ImageView
         android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:id="@+id/imageView2"
+        android:layout_gravity="center_horizontal"
+        android:src="@android:mipmap/sym_def_app_icon"
+       />
+
+    <EditText
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/etEmailLogin"
+        android:hint="Email" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/etPasswordLogin"
+        android:hint="Password" />
+
+    <Button
+        android:layout_width="394dp"
+        android:layout_height="wrap_content"
         android:text="Login"
-        android:id="@+id/textView4" />
+        android:id="@+id/btnLogin" />
+
 </LinearLayout>
