--- a/app/src/main/res/menu/activity_sebelum_login_drawer.xml
+++ b/app/src/main/res/menu/activity_sebelum_login_drawer.xml
@@ -3,33 +3,23 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_cek_tagihan"
+            android:icon="@drawable/ic_menu_send"
+            android:title="Cek Tagihan" />
+
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="More Features">
+
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:id="@+id/nav_registrasi"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="Registrasi" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/nav_login"
+                android:icon="@drawable/ic_menu_share"
+                android:title="Login" />
         </menu>
     </item>
 
