--- a/app/src/main/res/layout/fr_cek_tagihan.xml
+++ b/app/src/main/res/layout/fr_cek_tagihan.xml
@@ -11,4 +11,22 @@
         android:id="@+id/textView2"
         android:textAlignment="center"
         android:layout_gravity="center_horizontal" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spPilihProduk" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/edPelanggan"
+        android:hint="No Pelanggan" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cek Tagihan"
+        android:id="@+id/btnCekTagihan" />
+
 </LinearLayout>
