--- a/app/src/main/res/layout/fr_dashboard.xml
+++ b/app/src/main/res/layout/fr_dashboard.xml
@@ -1,12 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Dashboard"
-        android:id="@+id/textView5" />
-</LinearLayout>
+        android:text="Rp 100.000,00"
+        android:id="@+id/txtTotalTagihan"
+        android:gravity="center"
+        android:layout_alignParentEnd="true"
+        android:paddingTop="10dp"
+        android:textAlignment="center" />
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Bayar Semua"
+        android:id="@+id/btnBayarSemua"
+        android:layout_below="@+id/txtTotalTagihan"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="31dp"
+        android:layout_marginStart="20dp" />
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Refresh"
+        android:id="@+id/btnRefresh"
+        android:layout_alignBottom="@+id/btnBayarSemua"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="20dp" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lvTagihan"
+        android:layout_alignParentStart="true"
+        android:padding="10dp"
+        android:layout_below="@+id/btnBayarSemua" />
+</RelativeLayout>
