--- a/app/src/main/res/layout/app_bar_sebelum_login.xml
+++ b/app/src/main/res/layout/app_bar_sebelum_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.mastahcode.waviq.pembayaran.SebelumLoginActivity">
+    tools:context=".activity.SebelumLoginActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
