--- a/app/src/main/res/layout/content_seteah_login.xml
+++ b/app/src/main/res/layout/content_seteah_login.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.mastahcode.waviq.pembayaran.SeteahLoginActivity"
+    tools:context=".activity.SeteahLoginActivity"
     tools:showIn="@layout/app_bar_seteah_login">
 
 </RelativeLayout>
